--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,5 +1,3 @@
-- var n = 400
-
 doctype html
 html(lang='en')
     head
@@ -13,18 +11,18 @@ html(lang='en')
 
         .container  
             .general         
-                .start-wrapper
-                    - for (var i=1; i<=5; i++) {
-                        .star-center-side
-                    - }
-                    .side
-                        - for (var i=1; i<=3; i++) {
-                            .star-side
-                        - }
-                    .side.back
-                        - for (var i=1; i<=3; i++) {
-                            .star-side
-                        - }
+                //- .start-wrapper
+                //-     - for (var i=1; i<=5; i++) {
+                //-         .star-center-side
+                //-     - }
+                //-     .side
+                //-         - for (var i=1; i<=3; i++) {
+                //-             .star-side
+                //-         - }
+                //-     .side.back
+                //-         - for (var i=1; i<=3; i++) {
+                //-             .star-side
+                //-         - }
 
                 .second-tree
                     - for (var j=0; j<=6; j++) {
@@ -34,39 +32,9 @@ html(lang='en')
                             - } 
                     - }   
 
-                .second-tree.second
-                    - for (var j=0; j<=4; j++) {
-                        .row
-                            - for (var i=1; i<=6+j*2; i++) {
-                                .tree-side-el
-                            - } 
-                    - }   
-
-                .second-tree.tree
-                    - for (var j=0; j<=3; j++) {
-                        .row
-                            - for (var i=1; i<=6+j*2; i++) {
-                                .tree-side-el
-                            - } 
-                    - }   
-
-                .second-tree.four
-                    - for (var j=0; j<=5; j++) {
-                        .row
-                            - for (var i=1; i<=6+j*2; i++) {
-                                .tree-side-el
-                            - } 
-                    - }   
-
-                .second-tree.five
-                    - for (var j=0; j<=5; j++) {
-                        .row
-                            - for (var i=1; i<=6+j*2; i++) {
-                                .tree-side-el
-                            - } 
-                    - }   
-
-
-
-
-          
+                - for (var k=0; k<=5; k++) {
+                    .drift-wrapper
+                        - for (var z=1; z<=4; z++) {
+                            .drift-side
+                        - } 
+                - } 
