--- a/styl/styles.styl
+++ b/styl/styles.styl
@@ -135,7 +135,7 @@ starColor = gold;
 	width: 100%;
 	height: 100%;
 	background: whitesmoke;
-	border: 1px solid red;
+	// border: 1px solid red;
 	position: absolute;
 	bottom: 0;
 	transform-style: preserve-3d;
@@ -173,22 +173,6 @@ starColor = gold;
 	height: 200px;
 	margin: 0 auto;
 	transform-style: preserve-3d;
-
-	&:hover {
-		cursor: pointer;
-
-		.row:nth-of-type(1) {
-			.tree-side-el {
-				box-shadow: 0 0 12px red;
-			}
-		}
-
-		.row:nth-of-type(2) {
-			.tree-side-el {
-				box-shadow: 0 0 12px blue;
-			}
-		}
-	}
 
 	&.second {
 		top: 100px;
@@ -328,5 +312,110 @@ starColor = gold;
 		top: 120px;
 		right: 150px;
 		transform: rotateZ(12deg) translateZ(5px) scale3d(12, 24, 0.3) translateY(11px);
+	}
+}
+
+// ──── Snow start ────────────────────────────────────────────────────────────────────────
+startSize = 20;
+startColor = rgba(0, 55, 255, 0.6);
+startSolid = 1px;
+
+random(min, max) {
+	return floor(math(0, 'random') * (max - min + 1) + min);
+}
+
+@keyframes snowStarAnim {
+	0% {
+		transform: translate3d(0px, 0px, 500px) rotateX(90deg);
+		opacity: 1;
+	}
+
+	50% {
+		transform: translate3d(50px, 0px, 250px) rotateX(90deg) rotateZ(15deg) rotateY(15deg);
+		opacity: 0.6;
+	}
+
+	100% {
+		transform: translate3d(0, 0, -1px) rotateX(80deg) rotateZ(35deg);
+		opacity: 0.3;
+	}
+}
+
+.snow-start-spline {
+	width: startSize px;
+	height: startSize px;
+	position: absolute;
+	opacity: 0;
+	transform: translateZ(-10px);
+	animation-name: snowStarAnim;
+	animation-duration: 5 s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	transform-style: preserve-3d;
+
+	for spl in (1 .. 180) {
+		&:nth-of-type({spl}) {
+			top: random(1, 1000) px;
+			right: random(1, 1000) px;
+			animation-delay: random(5, 20) s;
+			animation-duration: random(5, 20) s;
+			width: random(5, 20) px;
+			height: random(5, 20) px;
+			opacity: random(0.5, 1);
+		}
+	}
+}
+
+.snow-start-el {
+	width: 50%;
+	height: 50%;
+	position: absolute;
+	overflow: hidden;
+	right: 0;
+	transform-origin: left bottom;
+
+	for xy in (0 .. 7) {
+		&:nth-of-type({xy + 1}) {
+			transform: rotate((xy * 45) deg);
+		}
+	}
+
+	.line {
+		position: absolute;
+		background: startColor;
+		width: startSolid;
+		transform-origin: bottom center;
+		height: 110%;
+		transform: rotateZ(45deg) translateX(-1px) translateY(0px);
+		top: 0;
+		left: 0;
+
+		&>div {
+			position: absolute;
+			background: startColor;
+			width: startSolid;
+			height: 50%;
+			transform-origin: bottom center;
+
+			&:nth-of-type(odd) {
+				transform: rotateZ(45deg);
+			}
+
+			&:nth-of-type(even) {
+				transform: rotateZ(-45deg);
+			}
+
+			for x in (1 .. 3) {
+				&:nth-of-type({x}) {
+					height: (50 - x * 9)%;
+					bottom: (x * (startSize / 6)) px;
+				}
+
+				&:nth-of-type({x + 3}) {
+					height: (50 - x * 9)%;
+					bottom: (x * (startSize / 6)) px;
+				}
+			}
+		}
 	}
 }
